--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -5,5 +5,135 @@ body {
 }
 
 main {
+    box-sizing: border-box;
     background-color: #D4E9E7;
+    margin: auto;
+    width: 70%;
+    padding: 10px;
+}
+
+p {
+    line-height: 1.5rem;
+    font-size: 1.2rem;
+}
+
+.banner {
+    max-width: 100%;
+    display: block;
+    width: 70%;
+    margin: auto;
+}
+
+h1 {
+    color: white;
+    font-size: 400%;
+    position: absolute;
+    top: 65%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+.hero {
+    position: relative;
+    text-align: center;
+}
+
+nav {
+    box-sizing: border-box;
+    background-color: #D4E9E7;
+    margin: auto;
+    width: 70%;
+    padding: 10px;
+}
+
+.nav-page {
+    display: inline-block;
+    text-align: center;
+    font-size: 200%;
+    border-right: 2px solid grey;
+}
+
+ul li a {
+    text-decoration: none;
+    margin-left: 130px;
+    margin-right: 130px;
+    color: black;
+    text-transform: uppercase;
+}
+
+.nav-page:last-child {
+    border-right: none;
+}
+
+h2 {
+    font-size: 250%;
+    margin-bottom: 10px;
+}
+
+.small-image {
+    float: left;
+    margin-right: 20px;
+    margin-bottom: 50px;
+    width: 25%;
+}
+
+h3 {
+    font-size: 220%;
+    margin-top: 20px;
+    margin-bottom: 10px;
+}
+
+.fact {
+    line-height: 1.5rem;
+    font-size: 1.2rem;
+    list-style-position: inside;
+}
+
+label {
+    display: block;
+    line-height: 2.5rem;
+    font-size: 1.2rem;
+}
+
+.radio {
+    display: inline;
+}
+
+input[type=text], input[type=email] {
+    width: 99%;
+}
+
+.send {
+    text-transform: uppercase;
+    font-size: .7rem;
+    background-color: #D4E9E7;
+    border: solid 1.5px;
+    height: 40px;
+    width: 55px;
+}
+
+textarea {
+    width: 96%;
+    padding: 50px 20px;
+}
+
+
+.contact {
+    border: solid 1.5px;
+    padding: 15px;
+}
+
+.contact p {
+    margin-top: 20px;
+    margin-bottom: 20px;
+    font-size: 1.5rem;
+}
+
+footer {
+    box-sizing: border-box;
+    text-align: right;
+    background-color: #D4E9E7;
+    margin: auto;
+    width: 70%;
+    padding: 30px;
 }
