--- a/midterm/css/main.css
+++ b/midterm/css/main.css
@@ -120,7 +120,7 @@ input[type=text], input[type=email] {
 textarea {
     box-sizing: border-box;
     width: 100%;
-    padding: 40px;
+    height: 100px;
 }
 
 /* adds spacing around form paragraph and changes sizing */
