--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -136,6 +136,22 @@ form button {
     border: 1px solid #c78c06;
 }
 
+/* Hours of Operation */
+table {
+    width: 100%;
+}
+
+th {
+    border: 1px solid black;
+    background-color:#ffe6ac;
+    padding: 20px;
+}
+
+td {
+    border: 1px solid black;
+    padding: 20px;
+}
+
 /* Footer */
 footer {
     background-color:#222;
