displays contact form as inline-block

--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -136,6 +136,11 @@ form button {
     border: 1px solid #c78c06;
 }
 
+/* Contact Form */
+.contact-form {
+    display: inline-block;
+}
+
 /* Hours of Operation */
 table {
     width: 100%;
