--- a/final-project/css/main.css
+++ b/final-project/css/main.css
@@ -11,20 +11,20 @@ h1 {
     padding: 40px 0 20px 0;
     color:#222;
     font-size: 4.5rem;
-    font-weight: bold;
+    font-weight: bolder;
     line-height: 6rem;
 }
 
 h2 {
     padding: 40px 0 20px 0;
     font-size: 3rem;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 h3 {
     padding: 40px 0 20px 0;
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: bolder;
 }
 
 p {
@@ -33,8 +33,9 @@ p {
 }
 
 button {
-    padding: 20px 30px 20px 30px;
-    font-size: 1.5rem;
+    padding: 20px 30px 25px 30px;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 1.4rem;
     border: none;
 }
 
@@ -48,6 +49,10 @@ nav {
     background-color: #222;
 }
 
+nav ul li {
+    list-style-type: none;
+}
+
 nav ul li a {
     text-align: center;
     font-size: 1.2rem;
@@ -57,14 +62,18 @@ nav ul li a {
     color: #c78c06;
  }
 
- nav ul li a:hover {
+nav ul li a:hover {
     background-color: #c78c06;
     color: #222;
  }
 
- li img {
-    display: block;
-}
+.hover:hover {
+    background-color: #c78c06;
+ }
+
+ .hover:hover a {
+    color:#222;
+ }
 
 form input {
     float: left;
@@ -109,6 +118,7 @@ nav button {
 
 .welcome button {
     background-color:#c78c06;
+    width: auto;
 }
 
 /* About Us */
@@ -177,7 +187,7 @@ nav button {
 }
 
 .subtitle {
-    font-weight: bold;
+    font-weight: bolder;
     padding: 0px 0px 0px 15px;
 }
 
@@ -244,31 +254,313 @@ footer a:visited {
     color:#c78c06;
 }
 
-
-
-
-/*  */
-
-.div {
-    grid-template-areas:
-    "heading heading heading heading heaidng heaidng"
-    "digital digital digital marketing marketing marketing"
-    "video video web web print print"
-}
-
-
-.heading {
-    grid-area: heading;
-}
-
-.digital {
-    grid-area: digital;
-}
-
-.marketing {
-    grid-area: digital;
-}
-
+/*********** Desktop /***********/
 @media screen and (min-width:760px) {
+    html {
+        font-size: 1.6rem;
+    }
 
+    .wrapper {
+        max-width: 100%;
+        padding-left: 200px;
+        padding-right: 200px;
+    }
+
+    h1 {
+        padding: 40px 0 20px 0;
+        color:#222;
+        font-size: 5rem;
+        font-weight: bolder;
+        line-height: 8rem;
+    }
+
+    h2 {
+        padding: 40px 0 20px 0;
+        font-size: 3rem;
+        font-weight: bolder;
+    }
+
+    h3 {
+        padding: 40px 0 20px 0;
+        font-size: 2rem;
+        font-weight: bolder;
+    }
+
+    p {
+        line-height: 1.5rem;
+        padding: 10px;
+    }
+
+    button {
+        padding: 40px 50px 45px 50px;
+        font-family: 'Open Sans', sans-serif;
+        font-size: 1.4rem;
+        border: none;
+    }
+
+    .fa {
+        padding: 10px;
+        font-size: 2rem;
+    }
+
+    /* Navigation Bar */
+    nav {
+        display: flex;
+        justify-content: center;
+    }
+
+    nav ul {
+        padding: 60px 60px 60px 60px;
+        display: flex;
+    }
+
+    nav ul li a {
+        padding: 30px 50px 30px 50px;
+        display: flex;
+    }
+
+    .hover li {
+        float: right;
+    }
+
+    form input {
+        width: 70%;
+        height: 30%;
+        margin-top: 80px;
+        display: flex;
+    }
+    
+    nav button {
+        height: 70px;
+        width: 70px;
+        padding: 0px;
+        background-color: #222;
+        border: 1px solid #c78c06;
+        margin-top: 80px;
+    }
+
+    .fa {
+        font-size: 1.5rem;
+    }
+
+    /* Welcome Section */
+    .welcome-background {
+        background-image: url(../images/main-banner.jpg);
+        background-size: cover;
+        background-position: center;
+        padding: 80px 200px;
+    }
+
+    .welcome {
+        background-color: rgba(0, 0, 0, 50%);
+        padding: 25px;
+    }
+
+    .welcome h1 {
+        color: white;
+    }
+
+    .welcome p {
+        color: white;
+    }
+
+    .welcome button {
+        background-color:#c78c06;
+    }
+
+    /* About Us */
+    .about-us {
+        background-color: #ffe6ac;
+    }
+
+    .about-us img {
+        width: 50%;
+        float: left;
+        padding: 15px 30px 15px 15px;
+    }
+
+    .clearfix::after {
+        content: "";
+        clear: both;
+        display: table;
+    }
+
+    /* Our Services */
+    .digital, .marketing, .video, .web, .print {
+        margin: 10px;
+    }
+
+    .our-services h3 {
+        padding: 50px 20px 20px 20px;
+    }
+
+    .our-services p {
+        padding: 20px 20px 0px 20px;
+    }
+
+    .our-services button {
+        margin: 20px;
+        width: 95%;
+        display: block;
+    }
+
+    .our-services {
+        display: grid;
+        grid-template-columns: repeat(6, 1fr);
+        grid-template-areas:
+        "our-services-heading our-services-heading our-services-heading our-services-heading our-services-heading our-services-heading"
+        "digital digital digital marketing marketing marketing"
+        "video video web web print print";
+    }
+
+    .our-services-heading {
+        grid-area: our-services-heading;
+    }
+    
+    .digital {
+        grid-area: digital;
+    }
+    
+    .marketing {
+        grid-area: marketing;
+    }
+
+    .video {
+        grid-area: video
+    }
+
+    .web {
+        grid-area: web;
+    }
+
+    .print {
+        grid-area: print;
+    }
+
+    /* Our Vision */
+    .our-vision button {
+        margin: 10px 0px;
+    }
+
+    /* Our Team */
+    .john, .bob {
+        margin-bottom: 20px;
+    }
+
+    .our-team h3 {
+        padding: 25px 20px 20px 20px;
+    }
+
+    .paragraph {
+        padding: 20px 20px 30px 20px;
+    }
+
+    .subtitle {
+        padding: 0px 0px 0px 20px;
+    }
+
+    .john-img {
+        float: left;
+        width: 50%;
+    }
+
+    .john-text {
+        float: right;
+        width: 50%;
+        background-color:#ffe6ac;
+    }
+
+    .bob-img {
+        float: right;
+        width: 50%;
+    }
+
+    .bob-text {
+        float: left;
+        width: 50%;
+        background-color:#ffe6ac;
+    }
+
+    /* Contact Form */
+    .contact-us form {
+        display: inline-block;
+    }
+
+    .contact-us {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        grid-template-areas:
+        "contact-us-heading contact-us-heading"
+        "form location"
+        "hours hours";
+    }
+
+    .contact-us-heading {
+        grid-area: contact-us-heading;
+    }
+
+    .form {
+        grid-area: form;
+    }
+
+    .location {
+        grid-area: location;
+    }
+
+    .hours {
+        grid-area: hours;
+    }
+
+    label {
+        font-size: 1rem;
+    }
+
+    #name, #email, #msg {
+        width: 220%;
+    }
+
+    textarea {
+        box-sizing: border-box;
+        width: 400%;
+        height: 100px;
+    }
+
+    .contact-us button {
+        background-color:#222;
+        color:#c78c06;
+        border: none;
+        padding: 5px;
+        margin-top: 20px;
+    }
+
+    /* Hours of Operation */
+    table {
+        width: 100%;
+    }
+
+    th {
+        border: 1px solid black;
+        background-color:#ffe6ac;
+        padding: 20px;
+    }
+
+    td {
+        border: 1px solid black;
+        padding: 20px;
+    }
+
+    /* Location */
+    iframe {
+        width: 100%;
+    }
+
+    /* Footer */
+    footer {
+        background-color:#222;
+        color:#c78c06;
+    }
+
+    footer a:visited {
+        color:#c78c06;
+    }
 }
